# centroid-cognitive-architecture

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md  pull_request_template.md  release_notes_v0.7.0.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  research_claim.md
.github/workflows/: ci.yml  test.yml
benchmarks/: README.md  __init__.py  run_all.py  run_distributed_benchmark.py  run_latency_benchmark.py  run_memory_benchmark.py  run_throughput_benchmark.py
benchmarks/lib/: __init__.py  common.py
config/: coherence_graph.yaml  daemon.yaml
configs/: __init__.py
configs/holly/: __init__.py  base.json  operations_observer.json  project_companion.json  support_continuity.json
configs/providers/: __init__.py  anthropic.json.example  openai.json.example
core/: __init__.py  agent_config.py  resources.py
core/affect/: README.md
core/coherence/: __init__.py  coherence_graph.py  coherence_index.py  do_operator.py  graph_loader.py  propagation.py
core/daemon/: __init__.py  cycle.py  daemon.py  scheduler.py
core/evaluation/: __init__.py  cli.py  harness.py  metrics.py  probes.py
core/fusion/: __init__.py  bridge_detector.py  concept_graph.py  synthesis.py
core/identity/: __init__.py  model.py
core/memory/: __init__.py  embedding_cache.py  memory_pyramid.py  retrieval.py  store.py  tfidf_index.py
core/models/: __init__.py  anthropic_adapter.py  base.py  capabilities.py  errors.py  mock_adapter.py  openai_adapter.py  openai_compatible_adapter.py  registry.py  types.py
core/planner/: __init__.py  calibration.py  feedback_loop.py  forecast.py  plan_tree.py  planner.py
core/priority/: __init__.py  scoring.py
core/router/: __init__.py  router.py
core/runtime/: __init__.py  audit.py  cli.py  configured_agent.py  configured_memory.py  configured_priority.py  configured_safety.py
core/safety/: __init__.py  policy.py
core/self_model/: __init__.py  anomaly_detector.py  health_scorer.py  model.py  telemetry_aggregator.py  world_snapshot.py
core/simulation/: __init__.py  divergence.py  intervention.py  safety_preflight.py  twin_buffer.py
core/telemetry/: README.md  __init__.py
core/temporal/: __init__.py  metrics.py
docs/: ARCHITECTURE.md  CUSTOMIZING_HOLLY.md  DAEMON.md  DEMO_DEPLOYMENT.md  EVALUATION.md  GLOSSARY.md  INSPECTION_NOTES.md  LIMITATIONS.md  MCP_ROADMAP.md  MEMORY_MODEL.md  MODEL_PROVIDERS.md  NON_CLAIMS.md  ORIGIN_SPLIT.md  ROADMAP.md  SAFETY_MODEL.md  TEMPORAL_STRATIFICATION.md  WHITEPAPER.md  WHY_CENTROID.md
docs/diagrams/: ARCHITECTURE_FLOW.md  MEMORY_FLOW.md  ORCHESTRATION_LAYERS.md  README.md  SAFETY_GATES.md  TIMING_FLOW.md
evaluation/: __init__.py
evaluation/fixtures/: __init__.py  baseline.json  coherence.json  fusion.json  memory.json  planner.json  self_model.json  sensory.json  simulation.json
examples/: __init__.py  demo_loop.py  run_agent.py  run_config_comparison.py  run_daemon.py  run_demo.py  run_evaluation.py  run_holly.py  run_identity_demo.py  run_provider_comparison.py  run_provider_demo.py  run_temporal_demo.py
nodes/: __init__.py
nodes/deliberation_node/: README.md
nodes/memory_node/: README.md
nodes/orchestration_node/: README.md
nodes/reflex_node/: README.md
nodes/sensory_node/: README.md  __init__.py  code_encoder.py  latent_projector.py  sensory_encoder.py  telemetry_encoder.py
schemas/: README.md  __init__.py  agent_config.schema.json  evaluation_result.schema.json  memory_event.schema.json  message_event.schema.json  model_provider.schema.json  node_heartbeat.schema.json  safety_decision.schema.json  telemetry_event.schema.json
schemas/examples/: __init__.py  evaluation_result.example.json  memory_event.example.json  message_event.example.json  model_provider.mock.valid.json  model_provider.ollama.example.valid.json  (+4 more)
templates/: README.md  __init__.py  minimal_agent.json
tests/: schema_helpers.py  test_additional_demos.py  test_benchmarks.py  test_configured_runtime.py  test_demo.py  test_evaluation.py  test_holly.py  test_installability.py  test_memory.py  test_model_providers.py  test_provider_demos.py  test_safety.py  test_temporal.py
(+28 files in other folders)
