[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "centroid-cognitive-architecture"
version = "0.1.0"
description = "Reference architecture for persistent AI agents with memory continuity, temporal layering, safety-gated actions, and runnable Holly demos."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Centroid Contributors"}]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.21"]

[project.scripts]
centroid-eval = "core.evaluation.cli:main"
centroid-demo = "examples.run_demo:main"
centroid-holly = "examples.run_holly:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "nodes*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]
