[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "centroid-cognitive-architecture"
version = "0.4.1"
description = "Reference architecture for persistent AI agents with memory continuity, temporal layering, safety-gated actions, and runnable Holly demos."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Centroid Contributors"}]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.21",
    "ruff>=0.8",
    "black>=24.0",
    "build>=1.2",
    "setuptools>=77",
    "wheel>=0.43",
]

providers = ["openai>=1.0", "anthropic>=0.40"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]

[project.scripts]
centroid-eval = "core.evaluation.cli:main"
centroid-demo = "examples.run_demo:main"
centroid-agent = "core.runtime.cli:main"
centroid-holly = "examples.run_holly:main"
centroid-provider-demo = "examples.run_provider_demo:main"
centroid-provider-comparison = "examples.run_provider_comparison:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "nodes*", "examples*", "configs*", "evaluation*", "schemas*", "templates*"]

[tool.setuptools.package-data]
"configs.holly" = ["*.json"]
"configs.providers" = ["*.json", "*.json.example"]
"evaluation.fixtures" = ["*.json"]
"schemas" = ["*.json", "*.md"]
"schemas.examples" = ["*.json"]
"schemas.policy" = ["*.json"]
"templates" = ["*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]
